src/objects/Formulary_Association__c.object
<CustomObject>
    <fields>
        <fullName>Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formulary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Formulary</label>
        <referenceTo>My_Formulary__c</referenceTo>
        <relationshipLabel>Formulary Associations</relationshipLabel>
        <relationshipName>Formulary_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insured_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insured Item</label>
        <referenceTo>Insured_Item__c</referenceTo>
        <relationshipLabel>Formulary Associations</relationshipLabel>
        <relationshipName>Formulary_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Formulary Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Formulary Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>